--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="main ">
       <div class="screen first">
         <div class="screen__container">
-          <div class="container">
+          <div class="wrapper">
             <section class="chocolate">
               <h3 class="chocolate__header">
                 натуральные <br />
@@ -144,42 +144,57 @@
         </div>
       </div>
       <div class="screen second">
+          
+
+
         <div class="screen__container">
+
+
           <div class="container">
-<div class="vantage">
-    <h3 class="vantage__header"></h3>
-    <p class="vantage__text"></p>
-</div>
-
-
+            <div class="vantage">
+              <h3 class="vantage__header">почему chocco?</h3>
+              <p class="vantage__text">В нашем мире все происходит очень быстро, поэтому мы<br>
+                  делаем батончики, которые удобно взять с собой.</p>
+            </div>
           </div>
           <div class="container">
-<ul class="vantage__list">
-    <li class="vantage__item">
-        <img src="" alt="" class="vantage__icon">
-        <h4 class="vantage__name">Полезно</h4>
-        <p class="vantage__text">Натуральность - ключевое качество
-                нашей продукции. Мы используем
-                только природные ингредиенты.</p>
-    </li>
-    <li class="vantage__item">
-        <img src="" alt="" class="vantage__icon">
-        <h4 class="vantage__name">Вкусно</h4>
-        <p class="vantage__text">Нежный, ненавязчивый, изысканный – 
-                так клиенты описывают вкусовые 
-                качества наших батончиков.</p>
-    </li>
-    <li class="vantage__item">
-        <img src="" alt="" class="vantage__icon">
-        <h4 class="vantage__name">Питательно</h4>
-        <p class="vantage__text">Высокое содержание качественного 
-                белка, а также всех необходимых 
-                витаминов и минералов.</p>
-    </li>
-</ul>
-
-
-            </div>
+            <ul class="vantage__list">
+              <li class="vantage__item">
+                <div class="vantage__pic">
+                    <img src="/icons/useful.svg" alt="" class="vantage__icon" />
+                </div>
+                <h4 class="vantage__name">Полезно</h4>
+                <p class="vantage__text">
+                  Натуральность - ключевое качество нашей продукции. Мы
+                  используем только природные ингредиенты.
+                </p>
+              </li>
+              <li class="vantage__item">
+                  <div class="vantage__pic">
+                      <img src="/icons/tasty.svg" alt="" class="vantage__icon" />
+                  </div>
+                <h4 class="vantage__name">Вкусно</h4>
+                <p class="vantage__text">
+                  Нежный, ненавязчивый, изысканный – так клиенты описывают
+                  вкусовые качества наших батончиков.
+                </p>
+              </li>
+              <li class="vantage__item">
+                  <div class="vantage__pic">
+                      <img src="/icons/nutritionally.svg" alt="" class="vantage__icon" />
+                  </div>
+                <h4 class="vantage__name">Питательно</h4>
+                <p class="vantage__text">
+                  Высокое содержание качественного белка, а также всех
+                  необходимых витаминов и минералов.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="second__background sheets"></div>
+          <div class="second__background strawberry"></div>
+          <div class="second__background dots"></div>
+          <div class="second__background dots dots--double"></div>
         </div>
       </div>
     </main>
