--- a/index.html
+++ b/index.html
@@ -144,24 +144,21 @@
         </div>
       </div>
       <div class="screen second">
-          
-
-
         <div class="screen__container">
-
-
           <div class="container">
             <div class="vantage">
               <h3 class="vantage__header">почему chocco?</h3>
-              <p class="vantage__text">В нашем мире все происходит очень быстро, поэтому мы<br>
-                  делаем батончики, которые удобно взять с собой.</p>
+              <p class="vantage__text">
+                В нашем мире все происходит очень быстро, поэтому мы<br />
+                делаем батончики, которые удобно взять с собой.
+              </p>
             </div>
           </div>
           <div class="container">
             <ul class="vantage__list">
               <li class="vantage__item">
                 <div class="vantage__pic">
-                    <img src="/icons/useful.svg" alt="" class="vantage__icon" />
+                  <img src="/icons/useful.svg" alt="" class="vantage__icon" />
                 </div>
                 <h4 class="vantage__name">Полезно</h4>
                 <p class="vantage__text">
@@ -170,9 +167,9 @@
                 </p>
               </li>
               <li class="vantage__item">
-                  <div class="vantage__pic">
-                      <img src="/icons/tasty.svg" alt="" class="vantage__icon" />
-                  </div>
+                <div class="vantage__pic">
+                  <img src="/icons/tasty.svg" alt="" class="vantage__icon" />
+                </div>
                 <h4 class="vantage__name">Вкусно</h4>
                 <p class="vantage__text">
                   Нежный, ненавязчивый, изысканный – так клиенты описывают
@@ -180,9 +177,13 @@
                 </p>
               </li>
               <li class="vantage__item">
-                  <div class="vantage__pic">
-                      <img src="/icons/nutritionally.svg" alt="" class="vantage__icon" />
-                  </div>
+                <div class="vantage__pic">
+                  <img
+                    src="/icons/nutritionally.svg"
+                    alt=""
+                    class="vantage__icon"
+                  />
+                </div>
                 <h4 class="vantage__name">Питательно</h4>
                 <p class="vantage__text">
                   Высокое содержание качественного белка, а также всех
@@ -196,6 +197,58 @@
           <div class="second__background dots"></div>
           <div class="second__background dots dots--double"></div>
         </div>
+      </div>
+
+      <div class="screen comment">
+        <section class="screen__container">
+          <div class="container">
+            <h3 class="comment__header">Отзывы</h3>
+          </div>
+          <div class="container">
+            <div class="user">
+              <div class="user__comment">
+                <div class="user__pic">
+                  <img
+                    src="/img/anya_hmelnitskaya.png"
+                    alt=""
+                    class="user__img"
+                  />
+                </div>
+                <div class="user__description description">
+                  <h4 class="description__header">Лучший перекус</h4>
+                  <div class="description__text">
+                    <p>Я ем малыми порциями, но часто. Это повышает мою
+                    продуктивность в разы. В течение дня сижу за компьютером и
+                    часто отходить в кафе или на кухню просто не могу себе
+                    позволить. А батончик – он всегда под рукой. Это приятно и
+                    удобно.</p>
+                  </div>
+                  <div class="description__name">Алёна Хмельницкая</div>
+                </div>
+              </div>
+              <ul class="user__list">
+                <li class="user__item">
+                   <a href="#" class="user__link"><img
+                    src="/img/anya_hmelnitskaya.png"
+                    alt=""
+                    class="item__pic"
+                  /></li>
+                </li>
+                <li class="user__item">
+                    <a href="#" class="user__link"><img src="/img/mariya_orlova.png" alt="" class="item__pic" /></li>
+                 </li>
+                <li class="user__item">
+                   <a href="#" class="user__link"><img src="/img/vadim_grachev.png" alt="" class="item__pic" /></li>
+                </li>
+                
+              </ul>
+            </div>
+          </div>
+
+          <div class="comment__background comment__background--strawberry"></div>
+          <div class="comment__background comment__background--berries"></div>
+          <div class="comment__background comment__background--pattern"></div>
+        </section>
       </div>
     </main>
     <footer class=""></footer>
