--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 <div class="wrapper">
   <section class="section hero">
-    <div class="container">
+    <div class="container hero__container">
       <header class="header">
         <div class="logo">
             <h2 class="logo__name">
@@ -44,15 +44,15 @@
                 </li>
               </ul>
             </nav>
-            <p class="phone">
+            <div class="phone">
                 <a class="phone__link" href="">8 800 903 90 90</a>
-              </p>
+            </div>
       </header>
       <div class="hero__content">
         <div class="hero__content-text">
             <h3 class="hero__title">
-                натуральные <br />
-                шоколадные <br />
+                натуральные 
+                шоколадные 
                 батончики
               </h3>
               <p class="hero__description">
@@ -88,10 +88,9 @@
               </ul>
         </div>
         <div class="hero__content-images">
-          <img src="./img/hero/sheet2.png" alt="" class="image sheet2">
+
           <img src="./img/hero/chocolate.png" alt="" class="image chocolate">
-          <img src="./img/hero/sheet1.png" alt="" class="image sheet1">
-          <img src="./img/hero/berries.png" alt="" class="image berries">
+          
         </div>
       </div>
       
