--- a/index.html
+++ b/index.html
@@ -56,32 +56,32 @@
                 батончики
               </h3>
               <p class="hero__description">
-                Наши батончики идеально подходят для <br />
+                Наши батончики идеально подходят для 
                 тех, кто следит за своим здоровьем
               </p>
             
-                <a class="btn header__order-btn" href="#">Заказать</a>
+                <a class="btn" href="#">Заказать</a>
               
         </div>
         <div class="hero__content-icon">
             <ul class="icon__list">
                 <li class="icon__item">
                   <div class="item__text item__text-natural">
-                    100% <br />
-                    натуральный <br />
+                    100% 
+                    натуральный 
                     продукт
                   </div>
                 </li>
                 <li class="icon__item">
                   <div class="item__text item__text-delivery">
-                    3-5 дней<br />
-                    доставка <br />
+                    3-5 дней
+                    доставка 
                     по РФ
                   </div>
                 </li>
                 <li class="icon__item">
                   <div class="item__text item__text-calorie">
-                    Не портит<br />
+                    Не портит
                     фигуру
                   </div>
                 </li>
@@ -140,10 +140,7 @@
             </p>
           </li>
         </ul>
-        <div class="why__images">
-          <img src="./img/why/sheet.png" alt="" class="image sheet">
-          <img src="./img/why/strawberry.png" alt="" class="image strawberry">
-        </div>
+
 
     </div>
   </section>
@@ -173,21 +170,17 @@
         </li>
       </ul>
       <ul class="comments__users">
-        <a class="comments__users-link" href="#"><li class="comments__avatar user user-hover">
-          <img src="/img/comment/anya_hmelnitskaya.png" alt="" class="user__avatar">
-        </li></a>
-        <a class="comments__users-link" href="#"><li class="comments__avatar user">
-          <img src="/img/comment/mariya_orlova.png" alt="" class="user__avatar">
-        </li></a>
-        <a class="comments__users-link" href="#"><li class="comments__avatar user">
-          <img src="/img/comment/vadim_grachev.png" alt="" class="user__avatar">
-        </li></a>
+        <li class="comments__avatar user user-hover">
+            <a class="comments__users-link" href="#"><img src="/img/comment/anya_hmelnitskaya.png" alt="" class="user__avatar">
+        </a></li>
+        <li class="comments__avatar user">
+            <a class="comments__users-link" href="#"><img src="/img/comment/mariya_orlova.png" alt="" class="user__avatar">
+        </a></li>
+        <li class="comments__avatar user">
+            <a class="comments__users-link" href="#"><img src="/img/comment/vadim_grachev.png" alt="" class="user__avatar">
+        </a></li>
       </ul>
-      <div class="comments__images">
-        <img src="./img/comment/pattern.png" alt="" class="image pattern">
-        <img src="./img/comment/berries.png" alt="" class="image berries">
-        <img src="./img/comment/strawberry.png" alt="" class="image strawberry">
-      </div>
+
     </div>
   </section>
 </div>
