--- a/index.html
+++ b/index.html
@@ -144,6 +144,69 @@
 
     </div>
   </section>
+
+<section class="section team">
+<div class="container team__container">
+  <h3 class="section__title ">
+    Команда
+  </h3>
+  <ul class="team__list">
+    <li class="team__item">
+      <div class="item__pic"><img src="/img/team/BorisFedorovitch.png" alt="" class="item__pic-image"></div>
+      <div class="item__content">
+        <h4 class="item__content-author">Борис Федорович</h4>
+        <div class="item__content-comment ">
+          <div class="item__position">Главный технолог</div>
+          <div class="item__text">Отвечает за вкусовые качества 
+            и калорийность.
+            </div>
+        </div>
+      </div>
+    </li>
+    <li class="team__item">
+      <div class="item__pic"><img src="/img/team/AllaIvanova.png" alt="" class="item__pic-image"></div>
+      <div class="item__content">
+        <h4 class="item__content-author">Алла Иванова
+        </h4>
+        <div class="item__content-comment ">
+          <div class="item__position">Специалист по упаковке
+          </div>
+          <div class="item__text">Автор запоминающегося стиля 
+            наших батончиков.
+            </div>
+        </div>
+      </div>
+    </li>
+    <li class="team__item">
+      <div class="item__pic"><img src="/img/team/KirillMatrosov.png" alt="" class="item__pic-image"></div>
+      <div class="item__content item__content--active">
+        <h4 class="item__content-author">Кирилл Матросов</h4>
+        <div class="item__content-comment ">
+          <div class="item__position">Оператор</div>
+          <div class="item__text">С радостью поможет подобрать батончики и оформить заказ. </div>
+        </div>
+      </div>
+    </li>
+    <li class="team__item">
+      <div class="item__pic"><img src="/img/team/MilaRyzhikova.png" alt="" class="item__pic-image"></div>
+      <div class="item__content">
+        <h4 class="item__content-author">Мила Рыжкова
+        </h4>
+        <div class="item__content-comment ">
+          <div class="item__position">PR, маркетинг
+          </div>
+          <div class="item__text">По всем вопросам сотрудничества 
+            и рекламы писать только Миле. 
+            </div>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+</section>
+
+
+
   <section class="section comments">
     <div class="container">
       <h3 class="comments__header">Отзывы</h3>
