--- a/index.html
+++ b/index.html
@@ -246,6 +246,27 @@
 
     </div>
   </section>
+
+  <section class="section contacts">
+    <div class="card"></div>
+    <footer class="footer">
+        <div class="container footer__container">      
+          <div class="footer__contacts contact">
+            <div class="contact__address">Москва, ул.Новый Арбат, д.31/12</div>
+            <div class="contact__phone">8 800 903 90 90</div>
+          </div>
+          <div class="footer__socials social">
+            <ul class="social__list">
+              <li class="social__item"><a href="#" class="list_item-link"><img src="/img/contacts/vk.png" alt="" class="item__icon"></a></li>
+              <li class="social__item"><a href="#" class="list_item-link"><img src="/img/contacts/facebook.png" alt="" class="item__icon"></a></li>
+              <li class="social__item"><a href="#" class="list_item-link"><img src="/img/contacts/inst.png" alt="" class="item__icon"></a></li>
+              <li class="social__item"><a href="#" class="list_item-link"><img src="/img/contacts/twitter.png" alt="" class="item__icon"></a></li>
+            </ul>
+          </div>
+      </div>
+
+    </footer>
+  </section>
 </div>
   </body>
 </html>
