--- a/index.html
+++ b/index.html
@@ -267,6 +267,86 @@
 
     </footer>
   </section>
+
+
+
+  <section class="section delivery">
+
+    <div class="container">
+        <h3 class="section__title section__title-form">
+            Закажите доставку
+          </h3>
+      <form action="" class="delivery__form form">
+          <div class="form__column form__column--left">
+              <div class="form__row">
+                <label for="" class="form__content  form__content--half">
+                  <div class="form__title">Имя</div>
+                  <input type="text" class="form__input">
+                </label>
+                <label for="" class="form__content  form__content--half">
+                    <div class="form__title">Телефон</div>
+                    <input type="text" class="form__input">
+                </label>
+              </div>
+              <div class="form__row">
+                  <label for="" class="form__content">
+                      <div class="form__title">Улица</div>
+                      <input type="text" class="form__input">
+                  </label>
+              </div>
+              <div class="form__row">
+                  <label for="" class="form__content form__content--fourth">
+                      <div class="form__title">Дом</div>
+                      <input type="text" class="form__input"></label>
+                  <label for="" class="form__content form__content--fourth">
+                      <div class="form__title">Корпус</div>
+                      <input type="text" class="form__input"></label>
+                  <label for="" class="form__content form__content--fourth">
+                      <div class="form__title">Квартира</div>
+                      <input type="text" class="form__input"></label>
+                  <label for="" class="form__content form__content--fourth">
+                      <div class="form__title">Этаж</div>
+                      <input type="text" class="form__input"></label>
+                </div>
+            </div>
+            <div class="form__column form__column--right">
+                <div class="form__row">
+                    <label for="" class="form__content">
+                        <div class="form__title">Комментарий</div>
+                        <textarea name="" id="" cols="30" rows="7" class="form__textarea"></textarea>
+                    </label>
+                    </div>
+                    <div class="form__row">
+                      <div class="form__radios">
+                        <label for="" class="form__radio-container">
+                          <input type="radio" class="form__radio" name="radio">
+                          <div class="form__radio-fake"></div>
+                          <div class="form__title form__title--margin-bottom">Потребуется сдача</div>
+                        </label>
+                        <label for="" class="form__radio-container">
+                            <input type="radio" class="form__radio" name="radio">
+                            <div class="form__radio-fake"></div>
+                            <div class="form__title form__title--margin-bottom">Оплата по карте</div>
+                        </label>
+                      </div>
+                      <div class="form__checkbox">
+                        <label for="" class="form__checkbox-container">
+                          <input type="checkbox" class="form__checkbox">
+                          <div class="form__title">Не перезванивать</div>
+                        </label>
+                      </div>
+                    </div> 
+                    <div class="form__row">
+                      <div class="form__buttons">
+                        <button type="submit" class="form__submit btn form__button-ok">Заказать</button>
+                        <button type="reset" class="form__reset btn form__button-cancel">Очистить</button>
+                      </div>
+                    </div>
+            </div>
+      </form>
+     
+    </div>
+  </section>
 </div>
   </body>
 </html>
