--- a/index.html
+++ b/index.html
@@ -207,7 +207,29 @@
 </div>
 </section>
 
+<section class="section menu1">
+    <h3 class="section__title section__title-menu1">
+        Меню
+      </h3>
 
+      <ul class="menu1__list">
+        <li class="menu1__item menu1__item--active">
+          <a href="" class="menu1__button" style="background:url('/img/menu/milk.png') center center /cover no-repeat;"><span class="menu1__button-text">Батончики с молоком</span></a>
+          <div class="menu1__content">Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
+              Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </div>
+        </li>
+        <li class="menu1__item">
+            <a href="" class="menu1__button" style="background:url('/img/menu/fruit.png') center center /cover no-repeat;"><span class="menu1__button-text">С мёдом и фруктами</span></a>
+            <div class="menu1__content">Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
+                Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </div>
+          </li>
+          <li class="menu1__item">
+              <a href="" class="menu1__button" style="background:url('/img/menu/berries.png') center center /cover no-repeat;"><span class="menu1__button-text">Дикие ягоды</span></a>
+              <div class="menu1__content">Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
+                  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </div>
+            </li>
+      </ul>
+</section>
 
   <section class="section comments">
     <div class="container">
