--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
         <div class="hero__content-icon">
             <ul class="icon__list">
                 <li class="icon__item">
+                  <div class="icon__item-pic">
+                      <svg class="hero__svg">
+                          <use xlink:href="sprite.svg#natural">
+                      </svg>
+                  </div>
                   <div class="item__text item__text-natural">
                     100% 
                     натуральный 
@@ -75,6 +80,11 @@
                   </div>
                 </li>
                 <li class="icon__item">
+                  <div class="icon__item-pic">
+                    <svg class="hero__svg">
+                        <use xlink:href="sprite.svg#delivery">
+                    </svg>
+                  </div>
                   <div class="item__text item__text-delivery">
                     3-5 дней
                     доставка 
@@ -82,6 +92,11 @@
                   </div>
                 </li>
                 <li class="icon__item">
+                  <div class="icon__item-pic">
+                      <svg class="hero__svg">
+                          <use xlink:href="sprite.svg#calorie">
+                        </svg>
+                  </div>
                   <div class="item__text item__text-calorie">
                     Не портит
                     фигуру
@@ -109,7 +124,9 @@
       <ul class="why__list">
           <li class="why__item feature">
             <div class="feature__pic">
-              <img src="/icons/useful.svg" alt="" class="feature__pic-img" />
+                <svg class="feature__pic-img">
+                    <use xlink:href="sprite.svg#useful">
+                  </svg>
             </div>
             <h3 class="feature__name">Полезно</h4>
             <p class="feature__text">
@@ -119,7 +136,9 @@
           </li>
           <li class="why__item feature">
             <div class="feature__pic">
-              <img src="/icons/tasty.svg" alt="" class="feature__pic-img" />
+                <svg class="feature__pic-img">
+                    <use xlink:href="sprite.svg#tasty">
+                  </svg>
             </div>
             <h3 class="feature__name">Вкусно</h4>
             <p class="feature__text">
@@ -129,11 +148,9 @@
           </li>
           <li class="why__item feature">
             <div class="feature__pic">
-              <img
-                src="/icons/nutritionally.svg"
-                alt=""
-                class="feature__pic-img"
-              />
+                <svg class="feature__pic-img">
+                    <use xlink:href="sprite.svg#nutritionally">
+                  </svg>
             </div>
             <h3 class="feature__name">Питательно</h4>
             <p class="feature__text">
@@ -420,9 +437,6 @@
 
     </footer>
   </section>
-
-
-
 
 </div>
   </body>
