--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             <div class="phone">
                 <a class="phone__link" href="">8 800 903 90 90</a>
             </div>
+            <div class="menu-burger-link burger">
+              <div class="burger__item"></div>  
+              <div class="burger__item"></div>  
+              <div class="burger__item"></div>  
+            </div>
       </header>
       <div class="hero__content">
         <div class="hero__content-text">
@@ -107,7 +112,7 @@
         <div class="hero__content-images">
 
           <img src="./img/hero/chocolate.png" alt="" class="image chocolate">
-          
+          <img src="./img/hero/bg768.png" alt="" class="image image--tablet">
         </div>
       </div>
       
@@ -402,7 +407,7 @@
                             <div class="form__title form__title--margin-bottom">Оплата по карте</div>
                         </label>
                       </div>
-                      <div class="form__row">
+                      <div class="form__row form__row-checkbox">
                       <div class="form__checkbox">
                         <label  class="form__checkbox-container">
                           <input type="checkbox" class="form__checkbox">
@@ -411,7 +416,7 @@
                         </label>
                       </div>
                     </div> 
-                    <div class="form__row">
+                    <div class="form__row form__row-buttons">
                       <div class="form__buttons">
                         <button type="submit" class="form__submit btn form__button--hover">Заказать</button>
                         <button type="reset" class="form__reset btn form__button-cancel">Очистить</button>
