--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </ul>
             </nav>
             <div class="phone">
-                <a class="phone__link" href="">8 800 903 90 90</a>
+                <a class="phone__link" href="tel:88009039090">8 800 903 90 90</a>
             </div>
             <div class="menu-burger-link burger">
               <div class="burger__item"></div>  
@@ -185,7 +185,7 @@
                 <h3 class="section__title section__title-slider">
                     Батончик "Морские водоросли"
                   </h3>
-                  <div class="slider content">
+                  <div class="slider__content content">
                       <div class="content__composition"><h4 class="content__composition-title">  Состав</h4>
                           <p class="content__composition-text">
                               Гранола из морских водорослей с овсом, миндалем и 
@@ -234,7 +234,7 @@
     <li class="team__item">
       <div class="item__pic"><img src="/img/team/BorisFedorovitch.png" alt="" class="item__pic-image"></div>
       <div class="item__content">
-        <h4 class="item__content-author">Борис Федорович</h4>
+        <a class="item__content-author" href="#">Борис Федорович</a>
         <div class="item__content-comment ">
           <div class="item__position">Главный технолог</div>
           <div class="item__text">Отвечает за вкусовые качества 
@@ -246,8 +246,8 @@
     <li class="team__item">
       <div class="item__pic"><img src="/img/team/AllaIvanova.png" alt="" class="item__pic-image"></div>
       <div class="item__content">
-        <h4 class="item__content-author">Алла Иванова
-        </h4>
+        <a class="item__content-author" href="#">Алла Иванова
+        </a>
         <div class="item__content-comment ">
           <div class="item__position">Специалист по упаковке
           </div>
@@ -260,7 +260,7 @@
     <li class="team__item">
       <div class="item__pic"><img src="/img/team/KirillMatrosov.png" alt="" class="item__pic-image"></div>
       <div class="item__content item__content--active">
-        <h4 class="item__content-author">Кирилл Матросов</h4>
+        <a class="item__content-author" href="#">Кирилл Матросов</a>
         <div class="item__content-comment ">
           <div class="item__position">Оператор</div>
           <div class="item__text">С радостью поможет подобрать батончики и оформить заказ. </div>
@@ -270,8 +270,8 @@
     <li class="team__item">
       <div class="item__pic"><img src="/img/team/MilaRyzhikova.png" alt="" class="item__pic-image"></div>
       <div class="item__content">
-        <h4 class="item__content-author">Мила Рыжкова
-        </h4>
+        <a class="item__content-author" href="#">Мила Рыжкова
+        </a>
         <div class="item__content-comment ">
           <div class="item__position">PR, маркетинг
           </div>
@@ -293,18 +293,18 @@
       <ul class="menu1__list">
         <li class="menu1__item menu1__item--active">
           <a href="" class="menu1__button" style="background:url('/img/menu/milk.png') center center /cover no-repeat;"><span class="menu1__button-text">Батончики с молоком</span></a>
-          <div class="menu1__content">Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
-              Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </div>
+          <div class="menu1__content"><p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
+              Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </</div>
         </li>
         <li class="menu1__item">
             <a href="" class="menu1__button" style="background:url('/img/menu/fruit.png') center center /cover no-repeat;"><span class="menu1__button-text">С мёдом и фруктами</span></a>
-            <div class="menu1__content">Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
-                Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </div>
+            <div class="menu1__content"><p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
+                Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </</div>
           </li>
           <li class="menu1__item">
               <a href="" class="menu1__button" style="background:url('/img/menu/berries.png') center center /cover no-repeat;"><span class="menu1__button-text">Дикие ягоды</span></a>
-              <div class="menu1__content">Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
-                  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы. </div>
+              <div class="menu1__content"><p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. 
+                  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</ </div>
             </li>
       </ul>
 </section>
@@ -357,39 +357,39 @@
       <form action="" class="delivery__form form">
           <div class="form__column form__column--left">
               <div class="form__row">
-                <label for="" class="form__content  form__content--half">
+                <label  class="form__content  form__content--half">
                   <div class="form__title">Имя</div>
                   <input type="text" class="form__input">
                 </label>
-                <label for="" class="form__content  form__content--half">
+                <label  class="form__content  form__content--half">
                     <div class="form__title">Телефон</div>
                     <input type="text" class="form__input">
                 </label>
               </div>
               <div class="form__row">
-                  <label for="" class="form__content">
+                  <label  class="form__content">
                       <div class="form__title">Улица</div>
                       <input type="text" class="form__input">
                   </label>
               </div>
               <div class="form__row">
-                  <label for="" class="form__content form__content--fourth">
+                  <label  class="form__content form__content--fourth">
                       <div class="form__title">Дом</div>
                       <input type="text" class="form__input"></label>
-                  <label for="" class="form__content form__content--fourth">
+                  <label  class="form__content form__content--fourth">
                       <div class="form__title">Корпус</div>
                       <input type="text" class="form__input"></label>
-                  <label for="" class="form__content form__content--fourth">
+                  <label  class="form__content form__content--fourth">
                       <div class="form__title">Квартира</div>
                       <input type="text" class="form__input"></label>
-                  <label for="" class="form__content form__content--fourth">
+                  <label  class="form__content form__content--fourth">
                       <div class="form__title">Этаж</div>
                       <input type="text" class="form__input"></label>
                 </div>
             </div>
             <div class="form__column form__column--right">
                 <div class="form__row">
-                    <label for="" class="form__content form__content-textarea">
+                    <label  class="form__content form__content-textarea">
                         <div class="form__title">Комментарий</div>
                         <textarea name="" id="" cols="30" rows="7" class="form__textarea"></textarea>
                     </label>
@@ -433,7 +433,7 @@
         <div class="container footer__container">      
           <div class="footer__contacts contact">
             <div class="contact__address">Москва, ул.Новый Арбат, д.31/12</div>
-            <div class="contact__phone">8 800 903 90 90</div>
+            <a class="contact__phone" href="tel:88009039090">8 800 903 90 90</a>
           </div>
           <div class="footer__socials social">
             <ul class="social__list">
