--- a/index.html
+++ b/index.html
@@ -455,6 +455,6 @@
   </section>
 
 </div>
-<script src="/js/script.js"></script>
+<script src="/js/script.js" charset="utf-8"></script>
   </body>
 </html>
