--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-    
+
   </head>
   <body>
 <div class="wrapper">
@@ -597,7 +597,11 @@
     </div>
   </section>
   <section class="section contacts">
-    <div class="card"></div>
+    <div class="map" id="map" >
+
+
+
+    </div>
     <footer class="footer">
         <div class="container footer__container">      
           <div class="footer__contacts contact">
@@ -623,5 +627,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
 <script src="/js/script.js" charset="utf-8"></script>
 <script src="/js/player.js" charset="utf-8"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+</script>
+<script src="/js/card.js" charset="utf-8"></script>
+
   </body>
 </html>
