--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
           <nav class="menu  animated fadeIn" id="chocolateMenu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a class="menu__link" href="">О нас </a>
+                  <a class="menu__link" href="" data-scroll-to="1">О нас </a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">Батончики </a>
+                  <a class="menu__link" href="" data-scroll-to="2">Батончики </a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">Команда</a>
+                  <a class="menu__link" href="" data-scroll-to="3">Команда</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">Меню </a>
+                  <a class="menu__link" href="" data-scroll-to="4">Меню </a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">Отзывы</a>
+                  <a class="menu__link" href="" data-scroll-to="5">Отзывы</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">Как мы работаем</a>
+                  <a class="menu__link" href="" data-scroll-to="6">Как мы работаем</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="">Контакты</a>
+                  <a class="menu__link" href="" data-scroll-to="8">Контакты</a>
                 </li>
               </ul>
             </nav>
@@ -74,7 +74,7 @@
                 тех, кто следит за своим здоровьем
               </p>
             
-                <a class="btn" href="#sendForm">Заказать</a>
+                <a class="btn" href="#sendForm" data-scroll-to="7">Заказать</a>
               
         </div>
         <div class="hero__content-icon">
