--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 <div class="wrapper">
-  
+  <div class="maincontent">
   <section class="section hero active">
     <div class="container hero__container">
       <header class="header">
@@ -620,7 +620,7 @@
 
     </footer>
   </section>
-
+</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.3.6/mobile-detect.min.js"></script>
